[project]
name = "logger-testing"
version = "0.1.0"
description = "Custom logging package comparing picologging and loguru"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "picologging>=0.9.3",
    "python-json-logger>=4.1.0",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logger"]

[tool.hatch.build.targets.wheel.force-include]
"logger/config.json" = "logger/config.json"

[dependency-groups]
dev = []
